cli/tests/snapshot/inputs/errors/dictionary_contract_fail.ncl
# capture = 'stderr'
# command = ['eval']
{ foo = 1, bar = "bar" } | {_: String}
